--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html
 nav li
 {
   float:left;
-  padding-right:35px;
+  padding-right:45px;
   font-size:12px;
 }
 nav ul
@@ -26,6 +26,10 @@ h1
 h4
 {
   color:gray;
+}
+p
+{
+  font-size:17px;
 }
 h4+p
 {
@@ -50,6 +54,10 @@ header
   padding:25px 20px 27px 20px;
   box-shadow:5px 5px 6px gray;
 }
+.text-indent
+{
+  text-indent:2em;
+}
 #part1 img
 {
   margin:10px 20px 20px 20px;
@@ -59,6 +67,134 @@ header
 {
   background:white;
   margin:18px;
-  padding:25px 20px 27px 20px;
+  padding:25px 20px 60px 20px;
   box-shadow:5px 5px 6px gray;
+  position:relative;
+  top:80px;
+}
+#hf li
+{
+  float:left;
+  padding-right:58px;
+  font-size:17px;
+}
+#hf img
+{
+  width:100%;
+}
+#part2 
+{
+  background:white;
+  margin:18px;
+  padding:25px 20px 60px 20px;
+  box-shadow:5px 5px 6px gray;  
+  position:relative;
+  top:90px;
+}
+#part2 div
+{
+  border:1px solid #dddddd;
+  box-shadow:0px 0px 10px #007700;
+  width:330px;
+  padding:10px 25px 25px 25px;
+  margin-top:30px;
+  text-align:center;
+}
+#part2 p
+{
+    font-size:20px;
+}
+#part3
+{
+  background:white;
+  margin:18px;
+  padding:25px 20px 60px 20px;
+  box-shadow:5px 5px 6px gray;  
+  position:relative;
+  top:100px;
+}
+#part3 table
+{
+  border-right:1px solid gray;
+  border-bottom:1px solid gray;
+  text-align:center;
+} 
+#part3 table th,td
+{
+  border-left:1px solid gray;border-top:1px solid gray;
+} 
+#part4
+{
+  background:white;
+  margin:18px;
+  padding:25px 20px 35px 20px;
+  box-shadow:5px 5px 6px gray;  
+  position:relative;
+  top:105px;
+}
+#part4 div
+{
+  display:inline;
+}
+#part4 lable
+{
+  margin-left:300px;
+  text-align:right;
+  width:240x;
+  height:35px;
+}
+#part4 div+p
+{
+  font-size:10px;
+  color:gray;
+  margin-left:433px;
+}
+#password-box
+{
+  margin-left:30px;
+}
+#sex1,#sex1+div,#sex1+div+div
+{
+  margin-left:80px;
+}
+#sex1+div+div+div
+{
+  margin-left:50px;
+  position:relative;
+  top:-70px;
+}
+#part4 textarea
+{
+  width:500px;
+  height:80px;
+  position:relative;
+  top:70px;
+}
+#submit
+{
+  width:100%;
+  height:37px;
+  border:1px solid #3434ff;
+  border-radius:6px;
+  background:#3434ff;
+  color:white;
+  font-size:15px;
+}
+footer
+{
+  background:rgba(0,0,0,0.85);
+  width:100%;
+  height:65px;
+  margin:0px;
+  padding:0px;
+  position:relative;
+  top:88px;
+  left:-8px;
+  width:1346px;
+}
+footer p
+{
+  color:white;
+  font-size:13px;
+  padding:21px 500px 20px 615px;;
 }
